2007-10-19  Nick Clifton  <nickc@redhat.com>

	* configure.tgt: Add support for am34-linux-gnu target.

2007-10-17  Zack Weinberg  <zack@codesourcery.com>

	* ldlang.c (lang_check_section_addresses): Also report size of
	overflow for any overflowed memory regions.
	(os_region_check): Diagnose an overflowed region only once per
	region.  Do not reset region->current on overflow.

2007-10-04  Nick Clifton  <nickc@redhat.com>

	PR linker/4844
	* emultempl/pep.em (pep_find_data_imports): Issue a warning
	message if auto importing is triggered without
	--enable-auto-import having been specified on the command line.
	* emultempl/pe.em (pe_find_data_imports): Likewise.

	PR linker/5097
	* emultempl/armelf.em (arm_elf_finish): Fix spelling typo.

2007-10-01  Nick Clifton  <nickc@redhat.com>

	PR linker/4844
	* genscript.sh: Add support for generating a .xa script for use
	with the --auto-import option.
	* ld.texinfo: Document the new behaviour of the --auto-import
	option.
	* ldint.texinfo: Document new script generation.
	* emulparams/i386pe.sh (GENERATE_AUTO_IMPORT): Define.
	* emulparams/i386pe_posix.sh (GENERATE_AUTO_IMPORT): Define.
	* emulparams/i386pep.sh (GENERATE_AUTO_IMPORT): Define.
	* emultemp/pe.em (..._get_script): Support the use of the auto
	import script.
	* scripttempl/pe.sc: Put the .rdata input sections into the .data
	output section when creating an auto import script.
	* scripttempl/pep.sc: Likewise.

2007-09-26  Brian Watt  <bwatt@us.ibm.com>

	* emultempl/spu_ovl.S: Add debug printf code.

2007-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/3281
	PR binutils/5037
	* ldexp.h (ldexp_control): Add relro, relro_start_stat and
	relro_end_stat.

	* ldexp.c (fold_binary): Set expld.dataseg.relro to
	exp_dataseg_relro_start or exp_dataseg_relro_end when
	seeing DATA_SEGMENT_ALIGN or DATA_SEGMENT_RELRO_END,
	respectively.

	* ldlang.c (lang_size_sections_1): Properly set
	expld.dataseg.relro_start_stat and
	expld.dataseg.relro_end_stat.