@@ -30,3 +30,5 @@ pe-dll.c
 pe-dll.h
 pep-dll.c
 pep-dll.h
+sha1.c
+sha1.h
